highlights. The full CVS log is available at www.xchat.org/cvslog/

------------------------------------------------------------------------------
 2.8.10 - dd/mm/yyyy
------------------------------------------------------------------------------
 - Emit the Topic Change event before setting the topic internally so plugins
   can access the old topic inside the callback.
 - Perl (Lian Wan Situ)
  * Added two new options to hook_print, run_after_event and filter. See
    documentation for details.
  * When building on Windows, generate the name of the DLL for the Perl
    library based on information from the header files instead of hardcoding
    the value.
  * Fixed a bug in the reinit handling code. The bug prevented the plugin from
    cleaning up properly. Which includes unloading scripts and removing
	 their GUI entries.

------------------------------------------------------------------------------
 2.8.8 - 30/May/2010
------------------------------------------------------------------------------

 - Made balloon time adjustable via /set input_balloon_time (Nicoleau Fabien).
 - Fixed a crash in the /SET command if a boolean value was loaded from config
   file that isn't set to 0 or 1.
 - Added -on and -off parameters to the /SET command. This can be used to set
   bits, for example gui_tweaks.
 - Made scrolling backwards for the search window act better (Richard Hitt).
 - [2045483] Made ESC key close the search window (Richard Rowell).
 - Improved the reconnect logic. If a network is already open but disconnected,
   it'll now get re-used if you use the Network List and connect to that same
   network.
 - Improved scrollback reloading speed significantly (Soeren Sandmann Pedersen).
 - [2957047] Handle CTCPs when IDmsg is used correctly (Lian Wan Situ).
 - [2987626] Allow /GHOST's password arg to be optional (Ori Avtalion).
 - Added networks: 7-indonesia, ChattingAway, GeekShed, TURLINet.